Adding toast were is needed

--- a/hiveStayFrontend/src/assets/css/material-dashboard.css
+++ b/hiveStayFrontend/src/assets/css/material-dashboard.css
@@ -1,12 +1,12 @@
 /*!
 
 =========================================================
-* Material Dashboard 2 - v3.1.0
+* Material  2 - v3.1.0
 =========================================================
 
-* Product Page: https://www.creative-tim.com/product/material-dashboard
+* Product Page: https://www.creative-tim.com/product/material-
 * Copyright 2023 Creative Tim (https://www.creative-tim.com)
-* Licensed under MIT (https://github.com/creativetimofficial/material-dashboard/blob/master/LICENSE.md)
+* Licensed under MIT (https://github.com/creativetimofficial/material-/blob/master/LICENSE.md)
 
 * Coded by www.creative-tim.com
 
@@ -20320,10 +20320,10 @@ fieldset:disabled .btn {
 /*!
 
 =========================================================
-* Material Dashboard 2 - v3.1.0
+* Material  2 - v3.1.0
 =========================================================
 
-* Product Page: https://www.creative-tim.com/product/material-dashboard
+* Product Page: https://www.creative-tim.com/product/material-
 * Copyright 2023 Creative Tim (https://www.creative-tim.com)
 * Licensed under MIT (site.license)
 
@@ -27934,4 +27934,4 @@ pre[class*="language-"] {
   }
 }
 
-/*# sourceMappingURL=dashboard-free.css.map */
+/*# sourceMappingURL=-free.css.map */
